--- a/task3.html
+++ b/task3.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Task 3</title>
+    <title>Sorting Array</title>
   </head>
   <body>
-    <h2>Sorting Array</h2>
-    <label for="numbers">Enter 5 numerical values separated by commas:</label>
-    <input type="text" id="numbers">
+    <h1>Sorting Array</h1>
+    <p>Enter 5 numerical values separated by commas:</p>
+    <input type="text" id="numbers" name="numbers">
+    <br>
     <button onclick="sortArray()">Sort</button>
-
-    <h3>Output:</h3>
-    <p id="output"></p>
-
+    <div id="output"></div>
+    <!-- <script src="task3.js"></script> -->
     <script src="task3.js"></script>
   </body>
 </html>
