--- a/task3.html
+++ b/task3.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Sorting Array</h1>
-    <p>Enter 5 numerical values separated by commas:</p>
+    <p>Enter 5 numerical values :</p>
     <input type="text" id="numbers" name="numbers">
     <br>
     <button onclick="sortArray()">Sort</button>
